stap-1/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo-deployment-jouwnaam
  namespace: backend-workshop
  labels:
    workshop-owner: jouwnaam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-demo-jouwnaam
  template:
    metadata:
      labels:
        app: nginx-demo-jouwnaam
        workshop-owner: jouwnaam
    spec:
      automountServiceAccountToken: false

      containers:
        - name: app
          image: nginx:stable-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 3
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 128Mi
      volumes:
        - name: html-volume
          configMap:
            name: nginx-demo-html-jouwnaam
