stap-1/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-service-jouwnaam
  namespace: backend-workshop
  labels:
    workshop-owner: jouwnaam
spec:
  type: ClusterIP
  selector:
    app: nginx-demo-jouwnaam
  ports:
    - name: http
      port: 80
      targetPort: http
