stap-1/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress-jouwnaam
  namespace: backend-workshop
  labels:
    workshop-owner: jouwnaam
spec:
  ingressClassName: nginx

  rules:
    - host: nginx-web-jouwnaam.workshop.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-demo-service-jouwnaam
                port:
                  number: 80
